--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -3,8 +3,8 @@
 # scripts with gettext translations
 scripts/makepkg.sh.in
 scripts/makepkg-template.pl.in
-scripts/pacman-db-upgrade.sh.in
-scripts/pacman-key.sh.in
+scripts/meme-db-upgrade.sh.in
+scripts/meme-key.sh.in
 scripts/pkgdelta.sh.in
 scripts/repo-add.sh.in
 scripts/libmakepkg/integrity.sh.in
