--- a/src/meme/po/POTFILES.in
+++ b/src/meme/po/POTFILES.in
@@ -2,17 +2,17 @@
 # If a file is commented out, it is because it shouldn't have any
 # translatable strings
 
-# pacman frontend source files
-src/pacman/callback.c
-src/pacman/check.c
-src/pacman/conf.c
-src/pacman/database.c
-src/pacman/deptest.c
-src/pacman/package.c
-src/pacman/pacman.c
-src/pacman/query.c
-src/pacman/remove.c
-src/pacman/sync.c
-src/pacman/upgrade.c
-src/pacman/util.c
-#src/pacman/util-common.c
+# meme frontend source files
+src/meme/callback.c
+src/meme/check.c
+src/meme/conf.c
+src/meme/database.c
+src/meme/deptest.c
+src/meme/package.c
+src/meme/meme.c
+src/meme/query.c
+src/meme/remove.c
+src/meme/sync.c
+src/meme/upgrade.c
+src/meme/util.c
+#src/meme/util-common.c
