--- a/etc/meme.conf.in
+++ b/etc/meme.conf.in
@@ -43,7 +43,7 @@ CheckSpace
 
 [meme]
 # SigLevel = Optional TrustAll
-SigLevel = Never
+# SigLevel = Never
 Server = https://mememgmt.tk/repo/
 
 #
