--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -26,6 +26,7 @@ parts:
       - libarchive-dev
       - libssl-dev
       - libcurl4-openssl-dev
+      - libxslt1-dev
       - pkg-config
       - libtool
       - wget
