--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,6 +15,7 @@ parts:
     plugin: autotools
     build-packages:
       - asciidoc
+      - automake
       - autopoint
       - autotools-dev
       - curl
@@ -32,6 +33,7 @@ parts:
       - libcurl4-openssl-dev
       - libxslt1.1
       - libxslt1-dev
+      - m4
       - pkgconf
       - pkg-config
       - libtool
