--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,7 @@ parts:
   meme:
     plugin: autotools
     build-packages:
+      - aclocal
       - asciidoc
       - automake
       - autopoint
